apps/dmz/mas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mas
  namespace: dmz
  labels:
    app.kubernetes.io/name: mas
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mas
  ports:
    - name: http
      port: 8080
      targetPort: http
