apps/dmz/mas/mas-synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mas-synapse-ingress
  namespace: dmz
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-synapse
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mas
      ports:
        - protocol: TCP
          port: 8008
