apps/dmz/mas/synapse-mas-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-matrix-synapse-mas-egress
  namespace: dmz
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-synapse
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mas
      ports:
        - protocol: TCP
          port: 8080
